# ai4se-safecode-harness

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  Procfile  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  docker-compose.yml  pyproject.toml  render.yaml
safecode/: __init__.py
safecode/auth/: __init__.py  credentials.py
safecode/cli/: __init__.py  auth.py  demo.py  main.py  run.py  serve.py
safecode/config/: __init__.py  config_manager.py  task_loader.py
safecode/context/: __init__.py  (+2 more)
tests/: conftest.py  test_action_parser.py  test_action_parser_invalid.py  test_action_parser_valid.py  test_agent_loop.py  test_agent_loop_guardrail_integration.py  test_cli_auth.py  test_cli_entry.py  test_cli_run_demo.py  test_cli_serve.py  test_config_manager.py  test_config_manager_defaults.py  test_conftest.py  test_context_builder_budget.py  test_context_builder_empty.py  test_context_builder_fields.py  test_context_builder_sensitive_redaction.py  test_context_builder_with_feedback.py  test_credentials.py  test_demo_tasks.py  test_docker_config.py  test_docker_deployment.py  test_feedback_loop_integration.py  test_file_modification_tools.py  test_gitlab_ci_config.py  test_guardrail_orchestrator.py  test_llm_backend.py  test_llm_factory.py  test_memory_manager.py  test_mock_llm.py  test_models_action.py  test_models_context.py  test_models_guardrail.py  test_models_runtime_config.py  test_models_session.py  test_models_task_config.py  test_models_test_feedback.py  test_models_tool_result.py  test_package_imports.py  test_path_guard.py  (+22 more)
(+60 files in other folders)
