[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safecode-harness"
version = "0.1.0"
description = "A controlled coding agent harness for safe code tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "keyring>=25.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
safecode = "safecode.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
